# ChangeLog for dev-db/postgis
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/postgis/ChangeLog,v 1.91 2014/07/26 08:37:07 patrick Exp $

  26 Jul 2014; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneeded useflag description from metadata.xml

  26 Jul 2014; Patrick Lauer <patrick@gentoo.org> -postgis-1.3.6-r2.ebuild,
  -postgis-1.4.2-r2.ebuild, -postgis-1.5.8.ebuild:
  Remove old

  14 May 2014; Tom Wijsman <TomWij@gentoo.org> postgis-1.3.6-r2.ebuild:
  [QA] EAPI 1 -> 5.

  26 Apr 2014; Chema Alonso <nimiux@gentoo.org> postgis-2.1.1.ebuild:
  Stable for amd64 wrt bug #498156

*postgis-2.1.1 (11 Nov 2013)

  11 Nov 2013; Patrick Lauer <patrick@gentoo.org> +postgis-2.1.1.ebuild:
  Bump

  23 Aug 2013; Aaron W. Swenson <titanofold@gentoo.org>
  +files/postgis-2.0-arflags.patch:
  Add AR flags patch.

  23 Aug 2013; Aaron W. Swenson <titanofold@gentoo.org>
  +files/postgis-2.1-ldflags.patch:
  Add LDFALGS patch for 2.1. Fixes bug 482014.

*postgis-2.1.0 (18 Aug 2013)

  18 Aug 2013; Aaron W. Swenson <titanofold@gentoo.org>
  -postgis-2.1.0_beta3.ebuild, +postgis-2.1.0.ebuild,
  files/postgis-2.1-pkgconfig-json.patch:
  Version bump and fix bug 464386 and bug 477810.

*postgis-2.1.0_beta3 (26 Jun 2013)

  26 Jun 2013; Aaron W. Swenson <titanofold@gentoo.org>
  +postgis-2.1.0_beta3.ebuild, +files/postgis-2.1-pkgconfig-json.patch:
  Version bump. Fixes bug 470050.

  28 Apr 2013; Aaron W. Swenson <titanofold@gentoo.org>
  -postgis-1.3.6-r1.ebuild, -postgis-1.4.2-r1.ebuild, -postgis-1.5.3-r1.ebuild,
  -postgis-1.5.5.ebuild, -postgis-2.0.0.ebuild, -postgis-2.0.1.ebuild,
  -postgis-2.0.2-r2.ebuild:
  Cleaning out cruft.

  26 Apr 2013; Agostino Sarubbo <ago@gentoo.org> postgis-2.0.3.ebuild:
  Stable for ppc, wrt bug #457958

  15 Apr 2013; Agostino Sarubbo <ago@gentoo.org> postgis-2.0.3.ebuild:
  Stable for x86, wrt bug #457958
