@@ -1,8 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST joblib-0.8.0.tar.gz 309866 SHA256 b0f628f878ee808cb8987ac7fd82abdb7a2a6e3252c65d7ed28e26b806d82a45 SHA512 5dc5f89bea0204975765d88ef5e1f1faac6541a71845a74865e10c23ca3363ee8f39f62eb35b7cd944b0768a85f44f5d9d7deb02a17df80bec36f9e75f071aba WHIRLPOOL 15f65fdd838287c130da28c27989c998b4eccdc2dc899cecb277cf829345ad56a3e7fa39e61e4669e3afcc2ba96ca6624a50d1f5fd10ed7a7d60d96b510e3fd4
 DIST joblib-0.8.1.tar.gz 310038 SHA256 0a8d9707d7f28ee155c1ec174868548ad2ae88f5f8ca08c629ce41c0c96bd36f SHA512 a67521a0e73c38d045031f6b189bcc8d2cda3f3364f229177bed84ddb344e266e7faff0e5acd8b9dbf4463625dd5b1049d29176f447e8e2ea04e05096d271f23 WHIRLPOOL ca2d79a943ffa263c8c1ca45c5bb5a0deaa16d7a48859971ef52f2de96f097b7e3720fef053ad069411493fd17320a8e82e26feee4889dbd0777eb3327b32682
 DIST joblib-0.8.2.tar.gz 311162 SHA256 6434f2855be83796626185be474f06833cea2fd6fc65be765dc3ec39d6e620fc SHA512 63995559346aa032dc256c5995efe071fa5033b4fddaf9bafa45cb783ed74798e331e7bda2641163a8037ea044b8fee372af60860722e824a2f4cb161d7ceeb3 WHIRLPOOL a3892746ff382a2c64d49ed68f50b84b5b838f3a1f21c563646845e9265928946e59c22af2100e2a5f06c7a2b11d8603417075d6edf8bc9fc599d44b9b6fb766
+DIST joblib-0.8.3.tar.gz 317569 SHA256 f163790e4c08b52c3c37db132c0528c3041da9e1d0095199bebd0c9876e1fcd6 SHA512 2f8279e753ad5d6d0001f399b19fcbe602511b43926d94b1d80f0dcff266e249779e8bdf88be9c976a12a8416e677497c18ca7a5c9019cdde4415e9a8d97d3aa WHIRLPOOL 1aa9e0a6c5ca0184674d0df76ba05bb2c435319c60edda1880037acf8f9b9fe514b14b111da85c5be548f9d98c350b30d69b95eb0b5b7f96f7a13979f766f852
 EBUILD joblib-0.8.0.ebuild 1240 SHA256 8300cc95df26d3de1392652d67acaa5ad9025f73cc7294bf146e90905b4cb030 SHA512 a6aabe62a2f8209aa36a13173b3942b4a96b4a57355af425fd722ca59e934022d410021df71fee1259e71943e53189614e0f8871a8a12f442f90c56b5998336f WHIRLPOOL 7a6810713e8062c9eee1a4fbcd7759759fab3e2bedcb8441833fb12b9fb8a447d929d0bec6fcffb392a2011d72e6c31bc7bc2b8bbc655b710080ce2cf7e2040a
 EBUILD joblib-0.8.1.ebuild 1240 SHA256 47a23c7390ebe4e67be4f954c8dc08d3f57a677f5f58e40fa12a1dc05e6eab49 SHA512 31d3f17b4f3c112d6472131b8df5212a052f22071a5659a30f9c554bb1091eca3df04066d5d6503fba1d338c63964d4b805a978e72209dc744bd2485ac5604e8 WHIRLPOOL a9c0724423358bf79dea6cf9926d6386cdf6879c7cd2a19781f0fe77c0ff6456946998eca7c8f7aa2f58f69f1b62b8196a3f3424cf63149843b658ca1e87963a
 EBUILD joblib-0.8.2.ebuild 1240 SHA256 d8da6c04d0f6ef2c2b947ccc0b705d27279e2d1ad72203ac405ccbeca87d9fe7 SHA512 6a845a7a9297b4fc364cd53d5622fdcad178131ff5e01f66cb6b77a1416988157b24479fc3320c04ea5ffb235e8deed82bff67ad8da5e0a5b0a1d418069bbb38 WHIRLPOOL a239c7595e8f4a122baab02b95cf26b3e446ff2ea32fba6fcd6c6c7f77fe61b7cd05b30a0196bf2abf71ec3aa892764da007f04e02775eba3dbb0d328e91133d
-MISC ChangeLog 2001 SHA256 a5435968e1996157080423259f13e2c53eb1c5a2defeefe4311ddeb569d74a83 SHA512 6a469b52f30b8bdecca3d633fc54ba02678f04322c83dfb53305e8322eb7035a2e6e735fea33e96cba10e4cf750d868c93c1490ad47ef704cf4fc4cb8877da9a WHIRLPOOL 75fa5c528b2bcf1d51f650c2d293744687aabc12f172ebf446ddad02d797ab098e74782dc512e2fbb026da85054ee3184c2d1638c511b6633e38604f3b48f840
+EBUILD joblib-0.8.3.ebuild 1281 SHA256 c50e1a4496ca29a76b2b4b4aaff2ec7b072aaf437c35252647dc74f74a85bf19 SHA512 ee1014981440663ad8fecd999fcdfc9647bddf6db870bdcbbac2dcbdcb9c5957a20b27386d6ded15a7a21a2630cd2ccf25f277a93811851900acc123162ccd92 WHIRLPOOL 66dcc7fde0896f4bfd6aa5de53b5c14c46b419e4e940c0bff4103f6fc9ad576a4bbde5d2e9b8dc5d7ee3853bb3f55c5d2f27d1bbb8f56fd1015b8f96a1e265c1
+MISC ChangeLog 2108 SHA256 48a0027080807abc0b449c224d27df91dfeb4cd00222e32c447c1d1e71bb40fd SHA512 0377d11cba5e30ea3c6884d4ed754dd20f5379f824f16389304037189ef6c48ea0435a766fe0b4e0656f8290db73c40a4747af24cf94602c906287fe756fea72 WHIRLPOOL 55255248999fc66cbdb656e083875f99aa589d01e24b9a6488738bb8c04a3c5b10a77a7818e78d0b7636cf4ba6efcb502298b77d6559df1c918f9afaa28098ac
 MISC metadata.xml 680 SHA256 c6a106504bb5382db3a214d0f11c8249d4fba272b5b7c5380dc24cbe42cae84f SHA512 ae4afdad901720938466e3a91b4567f3c1af6dbdd4fb80b030aab100df1389d94afc6acd904ec0307a8b9e621d2f76588664292a1d5cda06b6c0af1f5c2cadc9 WHIRLPOOL c43b65f654fc02045ed06da166c2ff2d496620829eddebe5222810e0ff635df18ec5adec0e125c9f81fae194fbc1c6c84e5daf23f4cef69b973507b4845177bb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlP2vIwACgkQso7CE7gHKw3O2wCeJSslNfpzT1ScHNnDMw12dF6S
++Z8An3Qx/U3sc1tEQhwW7MqryatRNA+e
+=I0AX
+-----END PGP SIGNATURE-----
