@@ -1,15 +1,15 @@
 DEFINED_PHASES=compile config configure install postinst prepare pretend setup
-DEPEND=|| ( dev-db/postgresql-server:9.3 dev-db/postgresql-server:9.2 dev-db/postgresql-server:9.1 dev-db/postgresql-server:9.0 ) dev-libs/json-c dev-libs/libxml2:2 >=sci-libs/geos-3.3.8 >=sci-libs/proj-4.6.0 >=sci-libs/gdal-1.10.0 gtk? ( x11-libs/gtk+:2 ) doc? ( app-text/docbook-xsl-stylesheets app-text/docbook-xml-dtd:4.5 dev-libs/libxslt || ( media-gfx/imagemagick[png] media-gfx/graphicsmagick[imagemagick,png] ) ) virtual/pkgconfig test? ( dev-util/cunit ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool
+DEPEND=|| ( dev-db/postgresql-server:9.4 dev-db/postgresql-server:9.3 dev-db/postgresql-server:9.2 dev-db/postgresql-server:9.1 dev-db/postgresql-server:9.0 ) <dev-libs/json-c-0.11 dev-libs/libxml2:2 >=sci-libs/geos-3.3.8 >=sci-libs/proj-4.6.0 >=sci-libs/gdal-1.10.0 gtk? ( x11-libs/gtk+:2 ) doc? ( app-text/docbook-xsl-stylesheets app-text/docbook-xml-dtd:4.5 dev-libs/libxslt || ( media-gfx/imagemagick[png] media-gfx/graphicsmagick[imagemagick,png] ) ) virtual/pkgconfig test? ( dev-util/cunit ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 sys-devel/libtool
 DESCRIPTION=Geographic Objects for PostgreSQL
 EAPI=5
 HOMEPAGE=http://postgis.net
 IUSE=doc gtk test
 KEYWORDS=amd64 ~ppc ~x86 ~amd64-linux ~x86-linux
 LICENSE=GPL-2
-RDEPEND=|| ( dev-db/postgresql-server:9.3 dev-db/postgresql-server:9.2 dev-db/postgresql-server:9.1 dev-db/postgresql-server:9.0 ) dev-libs/json-c dev-libs/libxml2:2 >=sci-libs/geos-3.3.8 >=sci-libs/proj-4.6.0 >=sci-libs/gdal-1.10.0 gtk? ( x11-libs/gtk+:2 )
+RDEPEND=|| ( dev-db/postgresql-server:9.4 dev-db/postgresql-server:9.3 dev-db/postgresql-server:9.2 dev-db/postgresql-server:9.1 dev-db/postgresql-server:9.0 ) <dev-libs/json-c-0.11 dev-libs/libxml2:2 >=sci-libs/geos-3.3.8 >=sci-libs/proj-4.6.0 >=sci-libs/gdal-1.10.0 gtk? ( x11-libs/gtk+:2 )
 REQUIRED_USE=test? ( doc )
 RESTRICT=test
 SLOT=0
 SRC_URI=http://download.osgeo.org/postgis/source/postgis-2.1.1.tar.gz
 _eclasses_=autotools	ebea507d219855923e3438c953cf4ab8	eutils	06133990e861be0fe60c2b428fd025d9	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=3bb8eb7d584e97da806ed95f5eb0f05f
+_md5_=fc554702c10a533a2c112c04c2608b06
