@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/joblib
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/joblib/ChangeLog,v 1.13 2014/07/14 07:26:15 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/joblib/ChangeLog,v 1.14 2014/08/22 03:53:09 idella4 Exp $
+
+*joblib-0.8.3 (22 Aug 2014)
+
+  22 Aug 2014; Ian Delaney <idella4@gentoo.org> +joblib-0.8.3.ebuild:
+  bump
 
 *joblib-0.8.2 (14 Jul 2014)
 
