@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/postgis
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgis/ChangeLog,v 1.91 2014/07/26 08:37:07 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgis/ChangeLog,v 1.92 2014/08/22 03:49:29 patrick Exp $
+
+  22 Aug 2014; Patrick Lauer <patrick@gentoo.org> postgis-2.1.1.ebuild:
+  Fix json-c dep, add postgres-9.4 support #516986
 
   26 Jul 2014; Patrick Lauer <patrick@gentoo.org> metadata.xml:
   Remove unneeded useflag description from metadata.xml
